projects/compiler/test/parser/match_error_case_bad_binding.out
Error at %FILE_NAME%:1:17
Unexpected token 'int', expected one of 'identifier', '=>':
  |  match foo { A.B 123 => 123 }
                     ^