projects/compiler/test/parser/match_error_case_bad_binding.abra
match foo { A.B 123 => 123 }